WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305617
REGRESSION (iOS 26): Unable to dismiss software keyboard using Done button after presenting AutoFill credentials picker
https://bugs.webkit.org/show_bug.cgi?id=305617
Summary
REGRESSION (iOS 26): Unable to dismiss software keyboard using Done button af...
Wenson Hsieh
Reported
2026-01-15 17:50:06 PST
rdar://162423793
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2026-01-15 18:27:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56686
EWS
Comment 2
2026-01-15 23:35:21 PST
Committed
305694@main
(594434191685): <
https://commits.webkit.org/305694@main
> Reviewed commits have been landed. Closing PR #56686 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug